<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="8dp"
  card_view:cardCornerRadius="24dp"
  card_view:cardElevation="4dp"
  android:foreground="?android:attr/selectableItemBackground"
  card_view:cardBackgroundColor="#333333"> <!-- dark background -->

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="12dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <TextView
      android:id="@+id/tv_csv_filename"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/history_default_filename"
      android:textSize="16sp"
      android:textColor="@android:color/black" />

    <TextView
      android:id="@+id/tv_history_duration"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/history_item_default_duration"
      android:textSize="16sp"
      android:textColor="@android:color/black" />

    <ImageView
      android:id="@+id/iv_arrow"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:contentDescription="@string/go_to_history_details"
      android:padding="2dp"
      android:background="@drawable/baseline_keyboard_arrow_right_24" />
  </LinearLayout>

</androidx.cardview.widget.CardView>
