<?xml version="1.0" encoding="utf-8"?>
<!--XML code for activity_main.xml-->

<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/my_container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  tools:context=".ui.SoundClassifierFragment"
  android:background="?android:attr/colorBackground">


  <!--Heading Text View-->
  <TextView
    android:id="@+id/txthead"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textAlignment="center"
    android:textColor="@color/black"
    android:textSize="30sp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintVertical_bias="0.1" />

  <!--Status Text View-->
  <TextView
    android:id="@+id/tvStatus"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/status_initial"
    android:textAlignment="center"
    android:textSize="18sp"
    app:layout_constraintTop_toBottomOf="@id/txthead"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintVertical_bias="0.1" />

  <!--Danger Moment Text View-->

  <!--Classifier Text View-->
  <TextView
    android:id="@+id/tv_sound_event_in_moment"
    android:textStyle="bold"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/classifier_initial"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    tools:layout_editor_absoluteY="83dp"
    app:layout_constraintTop_toBottomOf="@id/tvStatus"/>

  <!--Record Button-->
  <TextView
    android:id="@+id/tvClassifier"
    android:textStyle="bold"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="52dp"
    android:text="@string/classifier_initial"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_sound_event_in_moment" />
  <Button
    android:id="@+id/bRecord"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_initial"
    app:layout_constraintTop_toBottomOf="@id/tvClassifier"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>